--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <div class="container-flex">
-                <h1 class="hero-h1 smaller" style="text-align:center;width:100%;max-width: 100%;"> Your network is your networth TEST !!!!</h1>
+                <h1 class="hero-h1 smaller" style="text-align:center;width:100%;max-width: 100%;"> Your network is your networth </h1>
                 <p class="hero-paragraph"> You are avarage of 5 people you spend your time with. Our mission is to surround you with the best people. </p>
                 <img src="https://i.ibb.co/6DxYp4L/banner.jpg" style="border-radius:20px;">
                 <div class="hero-image-wrapper"></div>
@@ -563,7 +563,7 @@
 
                             <!-- BOŠKO PRAŠTALO -->
                             <div class="f-feature-card-outlined">
-                                <img loading="lazy" style="border-radius: 50%;" width="150" src="https://media.licdn.com/dms/image/D4D03AQHnf45MrnrkeA/profile-displayphoto-shrink_800_800/0/1697617069236?e=1704326400&v=beta&t=5U4srdPBEsZWtnXAsQfp4fnoqUjiXAsAR7u1oZPcsc8" class="image-50 caoching">
+                                <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/bosko.jpeg" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
                                     <h5 class="f-h5-heading-5">Boško Praštalo</h5>
                                 </div>
