--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
 
         <!-- ACTION TAKER AND OBSEBER -- NEW -->
-        <section class="section-4">
+        <section class="section-4 d-none">
             <div class="f-container">
 
                 <!-- script -->
@@ -691,7 +691,11 @@
         <div data-w-id="b7f6ef0e-2a5d-127d-ee3f-c98b8228fc0a" class="section-2 thin-section"></div>
         <div class="footer">
             <div class="wrap">
-                <img src="images/App-Icon.png" width="75" sizes="(max-width: 479px) 81vw, 75px" srcset="images/App-Icon-p-500.png 500w, images/App-Icon-p-800.png 800w, images/App-Icon.png 851w" alt="" class="image-5">
+                <div class="nav-logo-wrap">
+                    <a aria-current='page' class='brand w-nav-brand w--current' href='/'>
+                        <h2>WIN</h2>
+                    </a>
+                </div>
                 <div class="footer-list">
                     <a class='footer-link' href='/privacy-policy'>Privacy Policy</a>
                     <a class='footer-link' href='/terms-conditions'>Terms &amp;Conditions</a>
