--- a/index.html
+++ b/index.html
@@ -689,13 +689,13 @@
         </div>
 
         <div data-w-id="b7f6ef0e-2a5d-127d-ee3f-c98b8228fc0a" class="section-2 thin-section"></div>
-        <div class="footer">
-            <div class="wrap">
-                <div class="nav-logo-wrap">
-                    <a aria-current='page' class='brand w-nav-brand w--current' href='/'>
-                        <h2>WIN</h2>
-                    </a>
-                </div>
+        <div class="footer" style="border-top: none !important;">
+            <div class="wrap" style="background-color: black;">
+                
+                <a style="text-align:center;" aria-current='page' class='brand w-nav-brand w--current' href='/'>
+                    <h2>WIN</h2>
+                </a>
+                
                 <div class="footer-list">
                     <a class='footer-link' href='/privacy-policy'>Privacy Policy</a>
                     <a class='footer-link' href='/terms-conditions'>Terms &amp;Conditions</a>
