--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         <!-- sponsors -->
         <h1 class="h1-3 mt-60">Sponzorji</h1>
 
-        <div id="mobile-sponsors" class="main-carousel w-100" data-flickity='{ "cellAlign": "center", "contain": true, "wrapAround": true, "groupCells": 3,"autoPlay": true}'>
+        <div id="mobile-sponsors" class="main-carousel w-100" data-flickity='{ "cellAlign": "center", "contain": true, "wrapAround": true,"autoPlay": true}'>
 
             <!-- LUI -->
             <div class="carousel-cell">
