--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         </div>
                         <div data-w-id="6afd13aa-62c3-57a1-8897-d2a5b112038f" style="opacity:0" class="centered-intro-5">
                             <div class="clip">
-                                <h1 class="large-heading smaller even-smaller">Kaj vključuje WIN članstvo?</h1>
+                                <h1 class="large-heading smaller even-smaller" id="title-fix">Kaj vključuje WIN članstvo?</h1>
                             </div>
                         </div>
                     </div>
