--- a/index.html
+++ b/index.html
@@ -634,23 +634,34 @@
                                 <p class="f-paragraph-large-5">"Skupina je res majka, skupaj debatiramo od busnessa pa do cisto vseh zivljenskih tem. Kdaj gremo tud žurat, ali pa nardit kakšno neumnost. Skratka biti obkrožen s takimi posamezniki je zame priviligij in sem jim zato nadvse hvalažen"</p>
                             </div>
 
-                            <!-- DOMEN -->
+                            <!-- JAKOB -->
                             <div class="f-feature-card-outlined">
-                                <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt="" srcset="images/Frame-48095556-p-500.png 500w, images//members/domen-kralj.png 595w" class="image-50 caoching">
+                                <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt="" srcset="images/Frame-48095556-p-500.png 500w, images//members/jakob.webp 595w" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
-                                    <h5 class="f-h5-heading-5">Domen K.</h5>
+                                    <h5 class="f-h5-heading-5">Jakob Š.</h5>
                                 </div>
-                                <p class="f-paragraph-large-5">"Skupina je res majka, skupaj debatiramo od busnessa pa do cisto vseh zivljenskih tem. Kdaj gremo tud žurat, ali pa nardit kakšno neumnost. Skratka biti obkrožen s takimi posamezniki je zame priviligij in sem jim zato nadvse hvalažen"</p>
+                                <p class="f-paragraph-large-5">" Če si želis osebe in poslovne rasti je to definitivno prava skupina zate. Pridobiš mindset, zagon in si ne dovoliš, da ne bi napredoval do vsakega naslednjega srečanja.”</p>
                             </div>
 
-                            <!-- DOMEN -->
+                            <!-- Matevž Ž. -->
                             <div class="f-feature-card-outlined">
-                                <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt="" srcset="images/Frame-48095556-p-500.png 500w, images//members/domen-kralj.png 595w" class="image-50 caoching">
+                                <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt="" srcset="images/Frame-48095556-p-500.png 500w, images//members/matevz.webp 595w" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
-                                    <h5 class="f-h5-heading-5">Domen K.</h5>
+                                    <h5 class="f-h5-heading-5">Matevž Ž.</h5>
                                 </div>
-                                <p class="f-paragraph-large-5">"Skupina je res majka, skupaj debatiramo od busnessa pa do cisto vseh zivljenskih tem. Kdaj gremo tud žurat, ali pa nardit kakšno neumnost. Skratka biti obkrožen s takimi posamezniki je zame priviligij in sem jim zato nadvse hvalažen"</p>
+                                <p class="f-paragraph-large-5">"Bi rad spoznal/a več isto mislečih ljudi in hkrati dobil/a pomoč in predloge pri tvojih projektih? Well tale skupina je top zate. Deljenje znanja, stikov, pomoč, prijateljstvo, inspiracije in mnogo več, vse to dobiš v tej skupini! Vedno odidem iz srečanja motiviran in z veliko novega znanja, kar je meni najbolj dragoceno.”</p>
                             </div>
+
+                            <!-- TIMOTEJ -->
+                            <div class="f-feature-card-outlined">
+                                <img loading="lazy" width="150" sizes="(max-width: 479px) 100vw, 306px" alt="" srcset="images/Frame-48095556-p-500.png 500w, images//members/timotej.webp 595w" class="image-50 caoching">
+                                <div class="f-margin-bottom-76">
+                                    <h5 class="f-h5-heading-5">Timotej B.</h5>
+                                </div>
+                                <p class="f-paragraph-large-5">" WIN Mastermind skupina je enkraten prikaz energije mladih, ki svojo zgodbo o uspehu pišejo s pomočjo podjetništva, kreativnega mreženja in uvajanju novih inovacij v današnjem nenehno spreminjajočem se svetu. Gre za pozitivno naravnano okolje, ki spodbuja člane k napredku, hkrati pa ne primanjkuje konstruktivne kritike s pomočjo katere se lahko ne samo kot posamezniki, ampak tudi kot skupina povzpnemo do svojega maksimuma. Na sestankih spoznavamo drug drugega, mešamo svoje ideje, popravljamo napake in si pomagamo usmerjati naše poslovne in osebne odnose. Gre za enkraten primer medosebnega sodelovanja ter težnje po izboljšanju življenjskih navad, ki v trenutnem svetu marsikomu še kako primanjkuje. Proces je vreden vsake minute, izkušnja pa kot bi dejal Mastercard, neprecenljiva.”</p>
+                            </div>
+
+                            
 
 
                         </div>
