--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
                                 Mastermind
                             </h2>
                             <ul>
-                                <li class="paragraph-47">Obkroži se z uspešnimi posamezniki</li>
-                                <li class="paragraph-47">Deli svoje ideje</li>
+                                <li class="paragraph-47">Obkroži se z kvalitetnimi ljudmi</li>
+                                <li class="paragraph-47">Iz meseca v mesec rasti</li>
+                                <li class="paragraph-47">Lažje opravi zadane cilje</li>
+                                <li class="paragraph-47">Brainstormaj svoje težave z ostalimi podjetniki </li>
+                                <li class="paragraph-47">Value for value</li>
                             </ul>
                         </div>
                         <div class="centre_block-3">
@@ -157,20 +160,28 @@
                             </div>
                         </div>
                         <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a179" style="opacity:0" class="process_details-3">
-                            <h2 class="h2-2">
-                                Srečanja z gosti
-                            </h2>
-                            <p class="paragraph-47">Spoznaj uspešne podjetnike na zaprtih srečanjih in izvedi, kako so se oni lotili podjetniške poti. Lahko jih vprašaš za nasvete, se kaj naučiš iz njihovih zmag ter porazov.</p>
+                            <h2 class="h2-2"> Srečanja z gosti </h2>
+                            <ul>
+                                <li class="paragraph-47">Spoznaj uspešne podjetnike</li>
+                                <li class="paragraph-47">Uči se iz njhovih napak in zmag</li>
+                                <li class="paragraph-47">Vprašaj jih za nasvete</li>
+                                <li class="paragraph-47">Razširi svoj network</li>
+                            </ul>
                         </div>
                     </div>
 
                     <div class="process_line-3"></div>
+
+                    <!-- Community -->
                     <div class="process_card-3">
                         <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a182" style="opacity:0" class="process_details-3">
                             <h2 class="h2-2">
                                 Community
                             </h2>
-                            <p class="paragraph-47">Imej dostop do najbolj aktivnih posameznikov v Sloveniji. Skupino sestavljajo ljudje iz več kot 20 različnih področij zato lahko takoj dobiš odgovore na svoja vprašanja. </p>
+                            <ul>
+                                <li class="paragraph-47">Dostop do mladih aktivnih posameznikov iz več kot 20 različnih področij.</li>
+                                <li class="paragraph-47">Dostop do privatnih networking dogodov</li>
+                            </ul>
                         </div>
                         <div class="centre_block-3 _3">
                             <div class="centre_icon_wrap-3">
@@ -299,21 +310,20 @@
                 </div>
                 <div class="w-layout-blockcontainer container-4 w-container">
 
-                    <!-- Cocktail partyies  -->
+                    <!-- private mastermind  -->
                     <div class="separator-div">
                         <div class="gradient-border-div">
                             <div class="w-layout-grid grid-6 _6-design">
                                 <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f8-59aa236b">
                                     <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f9-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0" class="div-block-58">
                                         <div class="div-block-68">
-                                            <h3 class="course-name">Business Cocktail parties</h3>
+                                            <h3 class="course-name">Private mastermind </h3>
                                             <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
                                         </div>
-                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37"> 
-                                            Kot član združenja WIN imate ekskluzivni dostop do poslovnih koktajl zabav. To so idealni dogodki za spoznavanje in izmenjavo idej z drugimi podjetniki in strokovnjaki iz različnih panog v neformalnem okolju. </p>
+                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">Private mastermind združuje do 12 članov, ki mesečno delijo uspehe in težave, postavljajo cilje in prevzemajo odgovornost za njihovo doseganje. Sodelovanje in medsebojna odgovornost zagotavljata, da vsak član aktivno prispeva k rasti in rešitvam skupine, hkrati pa skupinski pristop in kolektivna inteligenca omogočata boljše rešitve, kot bi jih dosegli samostojno. Ta format spodbuja odgovornost in zagotavlja, da so cilji doseženi z rednim preverjanjem napredka. </p>
                                     </div>
                                 </div>
-                                <img src="https://media.licdn.com/dms/image/D4D22AQFaoCl2xFc9Tg/feedshare-shrink_2048_1536/0/1689171286550?e=1700697600&v=beta&t=GPEWrlO2V74ohi1s3yQKPB8YCEK_lA_H6yCAp9_zCsw" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="https://media.licdn.com/dms/image/D4D22AQHZrFfnNQN5IQ/feedshare-shrink_2048_1536/0/1686933423710?e=1700697600&v=beta&t=dVMJbOfqUnQ3qdsUGoMyJOJ5H4rZCih19-lvE8Nu5Jc" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -336,42 +346,6 @@
                         </div>
                     </div>
 
-                    <!-- video arhiv -->
-                    <div class="separator-div">
-                        <div class="gradient-border-div">
-                            <div class="w-layout-grid grid-6 _6-design">
-                                <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f8-59aa236b">
-                                    <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f9-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0" class="div-block-58">
-                                        <div class="div-block-68">
-                                            <h3 class="course-name">Video arhiv</h3>
-                                            <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
-                                        </div>
-                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">V arhivu videoposnetkov združenja WIN so shranjeni posnetki s prejšnjih srečanj. Članom je zagotovljen neomejen dostop do teh posnetkov, kar jim omogoča ogled vseh sestankov in predavanj z gostujočimi govorniki. Za tiste čase, ko vam udeležba v živo ni uspela, lahko vsebine dogodkov doživite posredno z dostopom do video arhiva našega združenja. </p>
-                                    </div>
-                                </div>
-                                <img src="https://i.ibb.co/xhy1HWV/video-cards.png" loading="lazy" style="opacity:0" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- private mastermind  -->
-                    <div class="separator-div">
-                        <div class="gradient-border-div">
-                            <div class="w-layout-grid grid-6 _6-design">
-                                <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f8-59aa236b">
-                                    <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f9-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0" class="div-block-58">
-                                        <div class="div-block-68">
-                                            <h3 class="course-name">Private mastermind </h3>
-                                            <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
-                                        </div>
-                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">Private mastermind združuje do 12 članov, ki mesečno delijo uspehe in težave, postavljajo cilje in prevzemajo odgovornost za njihovo doseganje. Sodelovanje in medsebojna odgovornost zagotavljata, da vsak član aktivno prispeva k rasti in rešitvam skupine, hkrati pa skupinski pristop in kolektivna inteligenca omogočata boljše rešitve, kot bi jih dosegli samostojno. Ta format spodbuja odgovornost in zagotavlja, da so cilji doseženi z rednim preverjanjem napredka. </p>
-                                    </div>
-                                </div>
-                                <img src="https://media.licdn.com/dms/image/D4D22AQHZrFfnNQN5IQ/feedshare-shrink_2048_1536/0/1686933423710?e=1700697600&v=beta&t=dVMJbOfqUnQ3qdsUGoMyJOJ5H4rZCih19-lvE8Nu5Jc" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
-                            </div>
-                        </div>
-                    </div>
-
                     <!-- Obisk podjetja  -->
                     <div class="separator-div">
                         <div class="gradient-border-div">
@@ -386,6 +360,43 @@
                                     </div>
                                 </div>
                                 <img src="https://i.ibb.co/NZDjNrt/294035404-550342520119488-7237956828410403896-n.jpg" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Cocktail partyies  -->
+                    <div class="separator-div">
+                        <div class="gradient-border-div">
+                            <div class="w-layout-grid grid-6 _6-design">
+                                <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f8-59aa236b">
+                                    <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f9-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0" class="div-block-58">
+                                        <div class="div-block-68">
+                                            <h3 class="course-name">Business Cocktail parties</h3>
+                                            <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
+                                        </div>
+                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37"> 
+                                            Kot član združenja WIN imate ekskluzivni dostop do poslovnih koktajl zabav. To so idealni dogodki za spoznavanje in izmenjavo idej z drugimi podjetniki in strokovnjaki iz različnih panog v neformalnem okolju. </p>
+                                    </div>
+                                </div>
+                                <img src="https://media.licdn.com/dms/image/D4D22AQFaoCl2xFc9Tg/feedshare-shrink_2048_1536/0/1689171286550?e=1700697600&v=beta&t=GPEWrlO2V74ohi1s3yQKPB8YCEK_lA_H6yCAp9_zCsw" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                            </div>
+                        </div>
+                    </div>
+                
+                    <!-- video arhiv -->
+                    <div class="separator-div">
+                        <div class="gradient-border-div">
+                            <div class="w-layout-grid grid-6 _6-design">
+                                <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f8-59aa236b">
+                                    <div id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b11203f9-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0" class="div-block-58">
+                                        <div class="div-block-68">
+                                            <h3 class="course-name">Video arhiv</h3>
+                                            <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
+                                        </div>
+                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">V arhivu videoposnetkov združenja WIN so shranjeni posnetki s prejšnjih srečanj. Članom je zagotovljen neomejen dostop do teh posnetkov, kar jim omogoča ogled vseh sestankov in predavanj z gostujočimi govorniki. Za tiste čase, ko vam udeležba v živo ni uspela, lahko vsebine dogodkov doživite posredno z dostopom do video arhiva našega združenja. </p>
+                                    </div>
+                                </div>
+                                <img src="https://i.ibb.co/xhy1HWV/video-cards.png" loading="lazy" style="opacity:0" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
