--- a/index.html
+++ b/index.html
@@ -73,10 +73,11 @@
             </a>
             <div class="profile-images-wrapper">
                 <img src="images/people2x.png" width="80" alt="" class="people-group-image">
-                <div class="follower-number">
-                    Pridruži se skupnosti <span class="tag-span">50+ </span>
-                    podjetnikov
-                </div>
+                
+            </div>
+            <div class="follower-number text-center">
+                Pridruži se najbolj ambicijoznim <br> posameznikom v sloveniji. <span class="tag-span">50+ </span>
+                članov
             </div>
         </div>
         <!-- HEADER -->
@@ -317,7 +318,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Private mastermind združuje do 12 članov, ki mesečno delijo uspehe in težave, postavljajo cilje in prevzemajo odgovornost za njihovo doseganje. Sodelovanje in medsebojna odgovornost zagotavljata, da vsak član aktivno prispeva k rasti in rešitvam skupine, hkrati pa skupinski pristop in kolektivna inteligenca omogočata boljše rešitve, kot bi jih dosegli samostojno. Ta format spodbuja odgovornost in zagotavlja, da so cilji doseženi z rednim preverjanjem napredka. </p>
                                     </div>
                                 </div>
-                                <img src="https://media.licdn.com/dms/image/D4D22AQHZrFfnNQN5IQ/feedshare-shrink_2048_1536/0/1686933423710?e=1700697600&v=beta&t=dVMJbOfqUnQ3qdsUGoMyJOJ5H4rZCih19-lvE8Nu5Jc" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package /private-mastermind.webp" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -371,7 +372,7 @@
                                             <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
                                         </div>
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37"> 
-                                            Kot član združenja WIN imate ekskluzivni dostop do poslovnih koktajl zabav. To so idealni dogodki za spoznavanje in izmenjavo idej z drugimi podjetniki in strokovnjaki iz različnih panog v neformalnem okolju. </p>
+                                            Kot član združenja WIN imaš ekskluzivni dostop do poslovnih koktajl zabav. Ti dogodki so idealni za spoznavanje in izmenjavo idej z drugimi podjetniki in strokovnjaki iz različnih panog.
                                     </div>
                                 </div>
                                 <img src="https://media.licdn.com/dms/image/D4D22AQFaoCl2xFc9Tg/feedshare-shrink_2048_1536/0/1689171286550?e=1700697600&v=beta&t=GPEWrlO2V74ohi1s3yQKPB8YCEK_lA_H6yCAp9_zCsw" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
@@ -389,7 +390,7 @@
                                             <h3 class="course-name">Video arhiv</h3>
                                             <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png" loading="lazy" alt="" class="image-51">
                                         </div>
-                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">V arhivu videoposnetkov združenja WIN so shranjeni posnetki s prejšnjih srečanj. Članom je zagotovljen neomejen dostop do teh posnetkov, kar jim omogoča ogled vseh sestankov in predavanj z gostujočimi govorniki. Za tiste čase, ko vam udeležba v živo ni uspela, lahko vsebine dogodkov doživite posredno z dostopom do video arhiva našega združenja. </p>
+                                        <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">Ko postaneš WIN član dobiš dostop do več kot 50 ur posnetkov iz predavanj z gosti. Na teh posnetkih lahko najdeš ogromno goldden nuggetov, ki so nam jih zaupali gosti na privatnih srečanjih.</p>
                                     </div>
                                 </div>
                                 <img src="https://i.ibb.co/xhy1HWV/video-cards.png" loading="lazy" style="opacity:0" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
