deploy demo website

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Članstvo v združenju WIN prinaša mesečna predavanja uspešnih podjetnikov. Na teh srečanjih ugledni poslovneži delijo svoje zgodbe o uspehu in neuspehu ter nudijo vpogled v svoje poslovne strategije in izkušnje. Predavanja so interaktivna, saj lahko člani postavljajo vprašanja in tako iz prve roke pridobivajo znanje, ki jim lahko pomaga v njihovih podjetniških prizadevanjih. </p>
                                     </div>
                                 </div>
-                                <img src="https://media.licdn.com/dms/image/D4D22AQHZFJym5aWtKw/feedshare-shrink_2048_1536/0/1693405000524?e=1700697600&v=beta&t=2xcrzJFYsfgZql9_s0lEZlipoq67OnO7VU6r9Oiz9xs" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/predavanje-podjetnikov.webp" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -356,7 +356,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Za člane združenja WIN so organizirani obiski podjetij, kjer lahko iz prve roke opazujejo poslovne procese in se učijo od notranjih ekip. Ti obiski nudijo praktičen vpogled v delovanje uspešnih podjetij in omogočajo članom, da se neposredno povežejo s podjetniki in vodstvenimi delavci, kar je dragocena priložnost za pridobivanje znanj in razširjanje poslovnih mrež. </p>
                                     </div>
                                 </div>
-                                <img src="https://i.ibb.co/NZDjNrt/294035404-550342520119488-7237956828410403896-n.jpg" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/obisk-podjetja.webp" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
                                             Kot član združenja WIN imaš ekskluzivni dostop do poslovnih koktajl zabav. Ti dogodki so idealni za spoznavanje in izmenjavo idej z drugimi podjetniki in strokovnjaki iz različnih panog.
                                     </div>
                                 </div>
-                                <img src="https://media.licdn.com/dms/image/D4D22AQFaoCl2xFc9Tg/feedshare-shrink_2048_1536/0/1689171286550?e=1700697600&v=beta&t=GPEWrlO2V74ohi1s3yQKPB8YCEK_lA_H6yCAp9_zCsw" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/party.webp" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="paragraph-37">Ko postaneš WIN član dobiš dostop do več kot 50 ur posnetkov iz predavanj z gosti. Na teh posnetkih lahko najdeš ogromno goldden nuggetov, ki so nam jih zaupali gosti na privatnih srečanjih.</p>
                                     </div>
                                 </div>
-                                <img src="https://i.ibb.co/xhy1HWV/video-cards.png" loading="lazy" style="opacity:0" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/video-arhiv.webp" loading="lazy" style="opacity:0" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Discord skupnost, kjer člani izmenjujejo vse od poslovnih priložnosti, literarnih priporočil, do najav dogodkov v Ljubljani. Je prostor za razpravo, ustvarjanje novih prijateljstev in deljenje doživetij – od kave do globalnih potovanj. Ta virtualni prostor omogoča članom, da skupaj rastejo in se podpirajo v različnih aspektih življenja in kariere. </p>
                                     </div>
                                 </div>
-                                <img src="/images/discord.webp" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/discord.webp" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -452,7 +452,7 @@
                 </p>
                 <input type="text" class="d-none" placeholder="Vpišite email" class="input-mail">
                 <textarea rows="5" class="d-none" placeholder="Na kratko napišite o sebi." style="height: auto;" class="input-mail"></textarea>
-                <a id="prijava-button" href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://docs.google.com/forms/d/1WD-R9OyNUdA2MxHxhzDgfiI258CJXPOGZYZWAO6okWM/edit%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1698604845924113%26amp;usg%3DAOvVaw3qJmFoBTLtSoQ3FeCR0Oen&sa=D&source=docs&ust=1698604845945098&usg=AOvVaw0R7L71ErLXGL73BuY2Kjem" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
+                <a id="prijava-button" target="_blank" href="https://www.google.com/url?q=https://www.google.com/url?q%3Dhttps://docs.google.com/forms/d/1WD-R9OyNUdA2MxHxhzDgfiI258CJXPOGZYZWAO6okWM/edit%26amp;sa%3DD%26amp;source%3Deditors%26amp;ust%3D1698604845924113%26amp;usg%3DAOvVaw3qJmFoBTLtSoQ3FeCR0Oen&sa=D&source=docs&ust=1698604845945098&usg=AOvVaw0R7L71ErLXGL73BuY2Kjem" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                     <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
                 </a>
             </div>
