--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Private mastermind združuje do 12 članov, ki mesečno delijo uspehe in težave, postavljajo cilje in prevzemajo odgovornost za njihovo doseganje. Sodelovanje in medsebojna odgovornost zagotavljata, da vsak član aktivno prispeva k rasti in rešitvam skupine, hkrati pa skupinski pristop in kolektivna inteligenca omogočata boljše rešitve, kot bi jih dosegli samostojno. Ta format spodbuja odgovornost in zagotavlja, da so cilji doseženi z rednim preverjanjem napredka. </p>
                                     </div>
                                 </div>
-                                <img src="/images/package /private-mastermind.webp" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/private-mastermind.webp" loading="lazy" style="opacity:0;border-radius: 20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                                         <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0" class="d-none paragraph-37">Članstvo v združenju WIN prinaša mesečna predavanja uspešnih podjetnikov. Na teh srečanjih ugledni poslovneži delijo svoje zgodbe o uspehu in neuspehu ter nudijo vpogled v svoje poslovne strategije in izkušnje. Predavanja so interaktivna, saj lahko člani postavljajo vprašanja in tako iz prve roke pridobivajo znanje, ki jim lahko pomaga v njihovih podjetniških prizadevanjih. </p>
                                     </div>
                                 </div>
-                                <img src="/images/package /predavanje-podjetnikov.webp" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
+                                <img src="/images/package/predavanje-podjetnikov.webp" loading="lazy" style="opacity:0;border-radius:20px;" width="1000" alt="" id="w-node-_6afd13aa-62c3-57a1-8897-d2a5b1120400-59aa236b" data-w-id="6afd13aa-62c3-57a1-8897-d2a5b1120400" class="image-32 box-shadow">
                             </div>
                         </div>
                     </div>
