--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
                             <!-- Jure Laharnar -->
                             <div class="f-feature-card-outlined" style="height: fit-content;">
-                                <img loading="lazy" style="border-radius: 50%;" width="150" src="https://media.licdn.com/dms/image/C5603AQF5x6lUqFo0jw/profile-displayphoto-shrink_800_800/0/1644436932025?e=1704326400&v=beta&t=Yiz3IsdBzuZmiDb429PbkKVFDEAo9PBP8DhYUQXZ63c" class="image-50 caoching">
+                                <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/jure.jpeg" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
                                     <h5 class="f-h5-heading-5 text-center">Jure Laharnar</h5>
                                     <p class="f-paragraph-large-5 company-position">Podcast host & marketing specialist</p>
@@ -593,15 +593,13 @@
 
                             <!-- Gal Resnik -->
                             <div class="f-feature-card-outlined" style="height: fit-content;">
-                                <img loading="lazy" style="border-radius: 50%;" width="150" src="https://media.licdn.com/dms/image/C4E03AQHM29oDipLBRw/profile-displayphoto-shrink_800_800/0/1634588380563?e=1704326400&v=beta&t=BM8f5z4uKKW2VI1vWGwGOLNcssMZTTrjzhZ0QCc0Px4" class="image-50 caoching">
+                                <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/jure.jpeg" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
                                     <p class="f-paragraph-large-5 company-position d-none">ceo</p>
                                     <h5 class="f-h5-heading-5 text-center">Gal Resnik</h5>
                                 </div>
                                 <p class="f-paragraph-large-5">“Win association predstavlja odlično skupino mladih podjetnih posameznikov in je odlična izhodiščna točka za pogovore o velikih idejah.“</p>
                             </div>
-
-                            
 
                             <!-- NIKSA -->
                             <div class="f-feature-card-outlined d-none">
