--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
 
                             <!-- Gal Resnik -->
                             <div class="f-feature-card-outlined" style="height: fit-content;">
-                                <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/jure.jpeg" class="image-50 caoching">
+                                <img loading="lazy" style="border-radius: 50%;" width="150" src="images/guests/gal.jpeg" class="image-50 caoching">
                                 <div class="f-margin-bottom-76">
                                     <p class="f-paragraph-large-5 company-position d-none">ceo</p>
                                     <h5 class="f-h5-heading-5 text-center">Gal Resnik</h5>
